--- a/tests/gating/parent_pipeline.yml
+++ b/tests/gating/parent_pipeline.yml
@@ -61,7 +61,7 @@ jobs:
    - get: parent-trigger
    - get: child-trigger-a
      trigger: true
-     passed: [set_child_trigger]
+     passed: [set_child_triggers]
    - set_pipeline: child-pipeline-a
      file: pipelines-source/tests/gating/child_pipeline.yml
      var_files:
